# PreciseBet

./: .gitignore  buildfile.py  main.py  main.spec  pyproject.toml
.github/workflows/: build.yaml
cli/: __init__.py  export.py  generate_data.py  init_data.py  update.py
data/: __init__.py  handicap.py  save.py  table.py  value.py
precise_bet/: __init__.py  build.py  buildfile.py  info.py  main.py  version.py
precise_bet/cli/: __init__.py  export.py  flow.py  generate_data.py  gui.py  okooo.py  update.py
precise_bet/data/: __init__.py  handicap.py  recent_results.py  save.py  table.py  value.py
precise_bet/type/: __init__.py  click_enum_choice.py  table.py
precise_bet/util/: __init__.py  path.py  request.py  sleep.py
util/: __init__.py  request.py  sleep.py
