[tool.poetry]
name = "precise_bet"
version = "0.0.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["LTFan <xfqwdsj@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.31.0"
click = "^8.1.7"
pandas = "^2.1.3"
jinja2 = "^3.1.2"
openpyxl = "^3.1.2"
regex = "^2023.10.3"
fake-useragent = "^1.4.0"
beautifulsoup4 = "^4.12.2"
click-option-group = "^0.5.6"
tzdata = "^2023.3"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.2.0"
pyinstaller-versionfile = "^2.1.1"
semver = "^3.0.2"


[tool.poetry-dynamic-versioning]
vcs = "git"
metadata = true
dirty = true
style = "semver"


[tool.poetry-dynamic-versioning.substitution]
files = ["precise_bet/info.py"]


[tool.poetry.scripts]
build = "precise_bet.build:build"


[build-system]
requires = [
    "poetry-core",
    "poetry-dynamic-versioning",
]
build-backend = "poetry_dynamic_versioning.backend"
