[tool.poetry]
name = "precise_bet"
version = "0.0.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["LTFan <xfqwdsj@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.31.0"
typer = { extras = ["all"], version = "^0.15.1" }
rich = "^13.7.0"
tabulate = "^0.9.0"
pandas = "^2.1.3"
numpy = "^2.2.1"
jinja2 = "^3.1.2"
openpyxl = "^3.1.2"
regex = "^2024.11.6"
fake-useragent = "^2.0.3"
beautifulsoup4 = "^4.12.2"
tzdata = "^2024.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.2.0"
pyinstaller-versionfile = "^2.1.1"
semver = "^3.0.2"
black = "^24.4.2"



[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.cernet.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
vcs = "git"
metadata = true
dirty = true
style = "semver"


[tool.poetry-dynamic-versioning.substitution]
files = ["precise_bet/info.py"]


[tool.poetry.scripts]
precise_bet = "precise_bet.main:main"
build = "precise_bet.build:build"
build_one_file = "precise_bet.build:build_one_file"


[build-system]
requires = [
    "poetry-core",
    "poetry-dynamic-versioning",
]
build-backend = "poetry_dynamic_versioning.backend"

[virtualenvs]
prefer-active-python = true
